Commit folder Structure, rooting and main frame header, main, footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
+<header>
+  <app-menu><a routerLink="/menu">toto1</a>toto</app-menu>
+</header>
 <main>
+  main...
   <router-outlet></router-outlet>
+  ...end
 </main>
+
+<footer>
+footer
+  ...end
+</footer>
