Commit responsive menu, footer

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,17 +1,26 @@
-
 <div class="menu">
 
+    <a class="mobil" routerLink="/home">
     <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
+    </a>
     <div>
-    <h1>Menu works!</h1>
-    <p class="p-app_works">menu works!</p></div>
+        <h1>Menu works!</h1>
+    </div>
 
-    <ul class="menuItems">
-        <li>
-            <a routerLink="/home">Accueil</a>
-        </li>
-        <li>
-            <a routerLink="/signin/">Connexion</a>
-        </li>
-    </ul>
+    <div class="menuItems">
+        <div>
+            <a class="rlink" routerLink="/home">Accueil</a>
+        </div>
+        <div>
+            <a class="rlink" routerLink="/signin/">Connexion</a>
+        </div>
+        <a class="mobil" routerLink="/signin">
+        <div class="container">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        
+        </div>
+    </a>
+    </div>
 </div>
