--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,21 @@
   <app-menu><a routerLink="/menu">toto1</a>toto</app-menu>
 </header>
 <main>
-  main...
   <router-outlet></router-outlet>
-  ...end
 </main>
 
 <footer>
-footer
-  ...end
+  <div>
+    <small>Copyright © 2024 chatons.org. Tous droits réservés.</small>
+</div>
+<div>
+  <ul>
+    <li>
+      <a [routerLink]="['/about']">About</a>
+    </li>
+    <li>
+      <a [routerLink]="['/contact']">Contact</a>
+    </li>
+  </ul>
+</div>
 </footer>
