--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,22 @@ h3 {
   font-weight: 600;
   font-size: 1rem;
 }
+
+
+@media only screen and (max-width: 600px) {
+
+  h1 {
+      font-size: 2rem;
+      font-weight: 800;
+    }
+    
+    h2 {
+      font-size: 1rem;
+      font-weight: 600;
+    }
+    
+    h3 {
+      font-size: .5rem;
+      font-weight: 600;
+    }
+  }
