Commit request changes on app, menu component, font-family

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header>
-  <app-menu><a routerLink="/menu">toto1</a>toto</app-menu>
+  <app-menu><a routerLink="/menu"></a></app-menu>
+
 </header>
 <main>
   <router-outlet></router-outlet>
