--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,10 +1,11 @@
-<div class="menu">
+<nav class="menu">
 
     <a class="mobil" routerLink="/home">
     <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
     </a>
     <div>
-        <h1>Menu works!</h1>
+        <h1>Châtons</h1>
+        <small>Mon histoire à moi et à toi</small>
     </div>
 
     <div class="menuItems">
@@ -23,4 +24,4 @@
         </div>
     </a>
     </div>
-</div>
+</nav>
