Commit RC application on app, menu

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,27 +1,26 @@
 <nav class="menu">
 
     <a class="mobil" routerLink="/home">
-    <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
+        <img class="logo" src="../../../assets/logo.kittens.svg" alt="logo">
     </a>
     <div>
-        <h1>Châtons</h1>
+        <h1 class="head1-title">Châtons</h1>
         <small>Mon histoire à moi et à toi</small>
     </div>
 
-    <div class="menuItems">
-        <div>
+    <ul class="menuItems">
+        <li>
             <a class="rlink" routerLink="/home">Accueil</a>
-        </div>
-        <div>
+        </li>
+        <li>
             <a class="rlink" routerLink="/signin/">Connexion</a>
-        </div>
+        </li>
         <a class="mobil" routerLink="/signin">
-        <div class="container">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        
-        </div>
-    </a>
-    </div>
+            <ul class="container">
+                <li class="bar1"></li>
+                <li class="bar2"></li>
+                <li class="bar3"></li>
+            </ul>
+        </a>
+    </ul>
 </nav>
