--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
 <div>
   <ul>
     <li>
-      <a [routerLink]="['/about']">About</a>
+      <a [routerLink]="['/about']">A propos</a>
     </li>
     <li>
       <a [routerLink]="['/contact']">Contact</a>
