--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -43,11 +43,11 @@ footer {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
 
     h1 {
         font-size: 2rem;
-        font-weight: 800;
+        font-weight: 300;
       }
       
       h2 {
