Commit kitten (new card list form commponent service), user integration

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 10vh - 12vh);
+    //height: calc(100vh - 10vh - 12vh);
 }
 
 /* Footer section */
@@ -81,7 +81,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 10vh - 10vh);
+    //height: calc(100vh - 10vh - 10vh);
 }
 
 /* Footer section */
