--- a/src/app/components/kitten/kitten.component.html
+++ b/src/app/components/kitten/kitten.component.html
@@ -1,1 +1,12 @@
-<p>kitten works!</p>
+
+<h5>Carte personnelle</h5>
+
+<div class="kittenCard">
+        <img src="{{kittenCard.image}}" alt="Photo {{kittenCard.name}}">
+    <span>
+        <p><em class="pem">Coucou,</em></p>
+        <p>Je suis <em class="pem">{{kittenCard.name}}</em>
+            , au poste {{kittenCard.id}}.</p>
+        <p>Né de race {{kittenCard.race}}, le {{kittenCard.age}}. 😀</p>
+    </span>
+</div>
