Commit formkitten.component.html changes

--- a/src/app/components/formkitten/formkitten/formkitten.component.html
+++ b/src/app/components/formkitten/formkitten/formkitten.component.html
@@ -71,7 +71,7 @@
     <!--Champ contact-order-->
     <fieldset>
         <label for="kitten-picture">Photo </label>
-        <input id="kitten-picture" name="kitten-picture"  capture="camera" type="file"  accept="image/*" [(ngModel)]="kittenImage" #pictureKitten="ngModel"
+        <input id="kitten-picture" name="kitten-picture"  capture="camera" type="text"  accept="image/*" [(ngModel)]="kittenImage" #pictureKitten="ngModel"
             required>
     </fieldset>
     <!-- Vérification and Message d'erreurs de contact -->
