Commit css and menu htm  changes

--- a/src/_import.scss
+++ b/src/_import.scss
@@ -3,7 +3,7 @@
 $mainColor: #b23a86;
 
 /* styles */
-$global-font: "Open Sans";
+$global-font: "Gothic A1";
 $body-bg: rgb(253, 245, 230);
 $global-bsdw-color: rgba(17, 17, 26, 0.1) 0px 4px 16px 0px inset, rgba(17, 17, 26, 0.05) 0px 8px 32px 0px;
 $body-HeaderMainFooter-bg: oldlace;
