--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,10 +9,10 @@
     </div>
 
     <ul class="menuItems">
-        <li>
+        <li class="llink">
             <a class="rlink" routerLink="/home">Accueil</a>
         </li>
-        <li>
+        <li class="llink">
             <a class="rlink" routerLink="/signin/">Connexion</a>
         </li>
         <a class="mobil" routerLink="/signin">
