--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
-/* @use "./import" as *;
+ @use "./import" as *;
 
+/*
 
 * {
   margin: 0;
@@ -82,11 +83,11 @@ h3 {
 
 :root {
     // styles /
-    --global-font: "Open Sans";
+    --global-font: $global-font;
     --body-bg: rgb(253, 245, 230);
     --global-bsdw-color: rgba(17, 17, 26, 0.1) 0px 4px 16px 0px inset, rgba(17, 17, 26, 0.05) 0px 8px 32px 0px;
     --body-HeaderMainFooter-bg: oldlace;
-    --h1h2-color: rgb(92, 190, 6);
+    --h1h2-color: var(global-bsdw-color) //rgb(92, 190, 6);
     --h3h4-color: rgb(76, 157, 4);
     --dfn-color: rgb(82, 88, 77);
 
@@ -118,6 +119,8 @@ h3 {
     --main-grid-areas-items-container-hover: .1px dotted #ccc; //rgb(169, 237, 177);
 
     --header-border: var(--body-sections);
+    --menu-border: var(--body-sections);
+
     --main-grid-container-border: var(--body-sections);
     --grid-itemList: var(--grid-areas);
     --grid-itemList-CardsContainer-boder: var(--main-grid-areas-items);
@@ -131,9 +134,8 @@ h3 {
     --grid-itemForm: var(--grid-areas);
     --footer: var(--body-sections);
 
-    --kittenCard: 3px dotted magenta;
+    --kittenCard: var(--body-sections);
 }
-
 
 
 * {
@@ -148,6 +150,15 @@ body {
     box-shadow: var(--global-bsdw-color);
     margin: .1rem;
     padding: .1rem;
+    a,
+    a:visited {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    ul li {
+        list-style: none;
+    }
 
     h1,
     h2 {
@@ -180,7 +191,7 @@ body {
         box-shadow: var(--global-bsdw-color);
         padding: .5rem;
         //margin: .2rem;
-        border: var(--header-border);
+        //border: var(--header-border);
 
         // Header menu section //
         header app-menu {
@@ -194,14 +205,14 @@ body {
         }
     }
 
-/*     // Footer section //
+    // Footer section //
     main {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         //height: calc(100vh - 10vh - 12vh);
-    } */
+    }
 
     /****** LIST in main ****/
     .main-grid-container {
@@ -285,7 +296,7 @@ body {
         }
     }
 
-    footer {
+    /*     footer {
         display: block;
         text-align: center;
         background-color: var(--body-HeaderMainFooter-bg);
@@ -293,6 +304,25 @@ body {
         padding: .5rem;
         margin: .2rem;
         border: var(--footer);
+    } */
+
+    // Footer section //
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 10vh;
+
+        address,
+        ul,
+        small {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            gap: 20px;
+            padding: 5px;
+        }
     }
 }
 
