--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,15 +84,15 @@ h3 {
 :root {
     // styles /
     --global-font: $global-font;
-    --body-bg: rgb(253, 245, 230);
+    --body-bg: white;
     --global-bsdw-color: rgba(17, 17, 26, 0.1) 0px 4px 16px 0px inset, rgba(17, 17, 26, 0.05) 0px 8px 32px 0px;
-    --body-HeaderMainFooter-bg: oldlace;
+    --body-HeaderMainFooter-bg: white;
     --h1h2-color: var(global-bsdw-color) //rgb(92, 190, 6);
     --h3h4-color: rgb(76, 157, 4);
     --dfn-color: rgb(82, 88, 77);
 
     // List cards container/
-    --list-CardsContainer-bg-color: rgb(253, 245, 230);
+    --list-CardsContainer-bg-color: white;
     --list-CardsContainer-bx-Shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
     // Form /
@@ -107,7 +107,7 @@ h3 {
     --msgColorValid: green;
 
     // KittenCard /
-    --kittenCard_bx-shdow: 2px 2px 50px 10px rgb(245, 236, 161);
+    --kittenCard_bx-shdow: 2px 2px 50px 10px #ccc;
     --kittenCard-pem: rgb(176, 45, 73);
 
     // Borders to  DEBUG /
