--- a/src/app/pages/kittens/kittens.component.html
+++ b/src/app/pages/kittens/kittens.component.html
@@ -1,14 +1,16 @@
 <main class="main-grid-container">
+
+    <!-- AVAILABLE kittens section -->
     <section class="grid-itemList">
         <h3>Chatons disponibles</h3>
 
         <!--<button (click)="pushKittenForTest()"> ajouter</button>-->
         <div class="grid-itemList-CardsContainer">
 
-            @for (kitten of availableKittens; track $index) {
+            @for (kitten of getServiceKittenAvailableKittens(); track $index) {
             <div class="grid-itemList-CardContainer">
                 <div>
-                    <a (click)="sendAdoptedKittenToUser(kitten.id)">
+                    <a (click)="addAdoptedKittenToUserKittenLis($index)">
                         <!-- Card @Input -->
                         <app-kitten [kittenCard]="kitten"></app-kitten>
                         <!-- Kitten message to show -->
@@ -22,14 +24,17 @@
         </div>
     </section>
 
+    <!-- USER section - user's kittens list -->
     <section class="grid-itemUser">
-            <div class="grid-itemUser-UserKittens-Container">
-                <app-user [userAdoptedKittenList]="userAdoptedKittens"></app-user>
-            </div>
+        <div class="grid-itemUser-UserKittens-Container">
+            <app-user [userAdoptedKittens]="getServiceKittenAdoptedKitens()">
+            </app-user>
+        </div>
     </section>
 
+    <!-- FORM section - add new available kitten -->
     <section class="grid-itemForm">
-        <app-newkitten (createKittenEmitter)="addNewReceivedKitten($event)">
+        <app-newkitten (createKittenEmitter)="addNewAvailableKitten($event)">
         </app-newkitten>
     </section>
 </main>
